# rusted-rogue

./: .markdownlint.json  Cargo.toml  MAPS.md  README.md  SPECS.md  TODO.md  build.rs
.github/: copilot-instructions.md
automation/: README.md  backlog.yaml  bl-001-build-c.md  bl-002-os-sensitive.md  bl-003-golden-scenarios.md  bl-005-rust-architecture.md  bl-006-data-model.md  bl-map-generator-analysis.md  execution-log.md  runner.prompt.md
automation/harness/: README.md  compare_c_vs_rust.ps1  run_golden.ps1  run_golden_wsl.sh
automation/harness/inputs/: gs01_new_game.txt  gs02_move_hjkl.txt  gs03_inventory.txt
automation/harness/tools/: normalize_log.py  random_probe  random_probe.c
docs/: CONSISTENCY.md  HITPOINTS.md  SPECS.md  SPECS_new.md  release-rc1.md
original/: README.txt
original/rogue-libc5-ncurses/rogue/: Makefile  machdep.c  rogue
saves/: rusted-rogue-scores-v1.json
src/: constants.rs  lib.rs  main.rs
src/actors/: combat.rs  mod.rs  monster.rs  spawn.rs  types.rs
src/core_types/: mod.rs
src/game_loop/: mod.rs
src/inventory_items/: mod.rs
src/persistence/: mod.rs
src/platform/: mod.rs
src/rng/: mod.rs
src/ui_terminal/: canvas.rs  help.rs  icon.rs  input.rs  messages.rs  mod.rs  renderer.rs
src/world_gen/: generator.rs  maze.rs  mod.rs  passage.rs  rooms.rs  slots.rs  types.rs
tests/: smoke.rs
