[package]
name = "rusted-rogue"
version = "0.1.0"
edition = "2021"
default-run = "rusted-rogue"
build = "build.rs"

[[bin]]
name = "map_viewer"
path = "src/bin/map_viewer.rs"

[dependencies]
bitflags = "2"
iced = { version = "0.13", features = ["canvas", "image"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
proptest = "1"

[target.'cfg(windows)'.build-dependencies]
ico = "0.3"
winresource = "0.1"
image = { version = "0.25", default-features = false, features = ["png"] }
