[package]
name = "rusted-rogue"
version = "0.1.0"
edition = "2021"
default-run = "rusted-rogue"
build = "build.rs"

[[bin]]
name = "map_viewer"
path = "src/bin/map_viewer.rs"

[dependencies]
bitflags = "2"
iced = { version = "0.14", features = ["canvas", "image", "tokio", "advanced"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
proptest = "1"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level     = "z"      # ottimizza per dimensione (invece di velocità)
lto           = true     # Link-Time Optimization: rimuove codice morto tra crate
codegen-units = 1        # unità singola: LTO più aggressivo
strip         = true     # rimuove simboli di debug dal binario
panic         = "abort"  # panic senza stack unwinding (~10-20 kB risparmiati)